tests/bad_programs/type_errors/ass_double_to_int.nc
int main() {
    int i = 3.8;
    return 0;
}
